# WolframMLIR

./: CMakeLists.txt  README.md
include/: CMakeLists.txt
include/Wolfram/: CMakeLists.txt  WolframDialect.h  WolframDialect.td  WolframOpBase.td  WolframOps.h  WolframOps.td  WolframPasses.h  WolframPasses.td  WolframTypes.h  WolframTypes.td
include/Wolfram-c/: Dialects.h
lib/: CMakeLists.txt
lib/CAPI/: Dialects.cpp
lib/Wolfram/: CMakeLists.txt  WolframDialect.cpp  WolframOps.cpp  WolframPasses.cpp  WolframTypes.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Wolfram/: dummy.mlir  dummy2.mlir  wolfram-opt.mlir  wolfram-plugin.mlir
wolfram-opt/: CMakeLists.txt  wolfram-opt.cpp
wolfram-plugin/: CMakeLists.txt  wolfram-plugin.cpp
